feat: finishing get news
