# backend/docs/swagger.json
@@ -49,9 +49,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/opening": {
+            },
             "delete": {
                 "description": "Delete a news",
                 "consumes": [
